graph/deploy/kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: aoe2companion-$SERVICE_NAME
  namespace: default
  labels:
    app: aoe2companion-$SERVICE_NAME
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: aoe2companion-$SERVICE_NAME
