graph/deploy/kube/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aoe2companion-$SERVICE_NAME-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - $SERVICE_NAME.aoe2companion.com
      secretName: $SERVICE_NAME-aoe2companion-com-tls
  rules:
    - host: $SERVICE_NAME.aoe2companion.com
      http:
        paths:
          - backend:
              serviceName: aoe2companion-$SERVICE_NAME
              servicePort: 80
